@@ -56,8 +56,8 @@
 \tabular{ll}{
 Package: \tab sjPlot\cr
 Type: \tab Package\cr
-Version: \tab 1.6.7-4\cr
-Date: \tab 2015-01-04\cr
+Version: \tab 1.6.7-5\cr
+Date: \tab 2015-01-08\cr
 License: \tab GPL-3\cr
 }
 }
