@@ -6,6 +6,7 @@ Changes to functions:
 * Added parameter "pvaluesApaStyle" to various functions. If this parameter is TRUE, p-values less than 0.001 are indicated as "p < 0.001" instead of being rounded to "p = 0.000".
 * Added parameter "showTotalN" to "sjt.xtab" to show column and row sums even if parameter "showObserved" is FALSE.
 * Added parameter "digits.summary" to "sjt.grpmean" to use different digits for table values and summary statistics.
+* "sji.setValueLabels" now also accepts a vector for the parameter "labels" if "x" is a data frame. Using a vector will apply the labels to each variable of the data frame "x".
 
 Bug fixes:
 * Fixed bug with type = "dots" in "sjp.grpfrq".
